--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
     <div id="generated-rule">
         <h2>Copie e cole no seu arquivo de CSS:</h2>
         <div id="rules-area">
-            <p id="rule">box-shadow: <span></span></p>
-            <p id="webkit-rule">-webkit-box-shadow: <span></span></p>
-            <p id="moz-rule">-moz-box-shadow: <span></span></p>
+            <p id="rule">box-shadow: <span></span>;</p>
+            <p id="webkit-rule">-webkit-box-shadow: <span></span>;</p>
+            <p id="moz-rule">-moz-box-shadow: <span></span>;</p>
         </div>
         <p id="copy-instructions">Clique no quadro acima para copiar as regras</p>
     </div>
